--- a/environment.yml
+++ b/environment.yml
@@ -1,203 +1,17 @@
 name: disaster-damage-assessment
 channels:
   - conda-forge
-  - defaults
 dependencies:
-  - backcall=0.2.0=pyh9f0ad1d_0
-  - backports=1.0=py_2
-  - backports.functools_lru_cache=1.6.4=pyhd8ed1ab_0
-  - brotli=1.0.9=h8ffe710_6
-  - brotli-bin=1.0.9=h8ffe710_6
-  - ca-certificates=2021.10.8=h5b45459_0
-  - certifi=2021.10.8=py37h03978a9_1
-  - colorama=0.4.4=pyh9f0ad1d_0
-  - cycler=0.11.0=pyhd8ed1ab_0
-  - debugpy=1.5.1=py37hf2a7229_0
-  - decorator=5.1.1=pyhd8ed1ab_0
-  - entrypoints=0.4=pyhd8ed1ab_0
-  - fonttools=4.29.1=py37hcc03f2d_0
-  - freetype=2.10.4=h546665d_1
-  - fribidi=1.0.10=h8d14728_0
-  - icu=68.2=h0e60522_0
-  - intel-openmp=2022.0.0=h57928b3_3663
-  - ipykernel=6.8.0=py37h4038f58_0
-  - ipython=7.31.1=py37h03978a9_0
-  - jbig=2.1=h8d14728_2003
-  - jedi=0.18.1=py37h03978a9_0
-  - jinja2=3.0.3=pyhd8ed1ab_0
-  - joblib=1.1.0=pyhd8ed1ab_0
-  - jpeg=9e=h8ffe710_0
-  - jupyter_client=7.1.2=pyhd8ed1ab_0
-  - jupyter_core=4.9.1=py37h03978a9_1
-  - kiwisolver=1.3.2=py37h8c56517_1
-  - lcms2=2.12=h2a16943_0
-  - lerc=3.0=h0e60522_0
-  - libblas=3.9.0=13_win64_mkl
-  - libbrotlicommon=1.0.9=h8ffe710_6
-  - libbrotlidec=1.0.9=h8ffe710_6
-  - libbrotlienc=1.0.9=h8ffe710_6
-  - libcblas=3.9.0=13_win64_mkl
-  - libclang=11.1.0=default_h5c34c98_1
-  - libdeflate=1.8=h8ffe710_0
-  - libimagequant=2.17.0=hcfcfb64_1
-  - liblapack=3.9.0=13_win64_mkl
-  - libpng=1.6.37=h1d00b33_2
-  - libsodium=1.0.18=h8d14728_1
-  - libtiff=4.3.0=hd413186_2
-  - libwebp=1.2.2=h57928b3_0
-  - libwebp-base=1.2.2=h8ffe710_1
-  - libxcb=1.13=hcd874cb_1004
-  - libzlib=1.2.11=h8ffe710_1013
-  - llvm-openmp=12.0.1=h2d74725_1
-  - lz4-c=1.9.3=h8ffe710_1
-  - m2w64-gcc-libgfortran=5.3.0=6
-  - m2w64-gcc-libs=5.3.0=7
-  - m2w64-gcc-libs-core=5.3.0=7
-  - m2w64-gmp=6.1.0=2
-  - m2w64-libwinpthread-git=5.0.0.4634.697f757=2
-  - markupsafe=2.0.1=py37hcc03f2d_1
-  - matplotlib=3.5.1=py37h03978a9_0
-  - matplotlib-base=3.5.1=py37h4a79c79_0
-  - matplotlib-inline=0.1.3=pyhd8ed1ab_0
-  - mkl=2022.0.0=h0e2418a_796
-  - msys2-conda-epoch=20160418=1
-  - munkres=1.1.4=pyh9f0ad1d_0
-  - nest-asyncio=1.5.4=pyhd8ed1ab_0
-  - numpy=1.19.5=py37hcbcd69c_2
-  - openjpeg=2.4.0=hb211442_1
-  - openssl=1.1.1l=h8ffe710_0
-  - packaging=21.3=pyhd8ed1ab_0
-  - pandas=1.3.5=py37h9386db6_0
-  - parso=0.8.3=pyhd8ed1ab_0
-  - pickleshare=0.7.5=py_1003
-  - pillow=9.0.0=py37h8675073_0
-  - pip=22.0.3=pyhd8ed1ab_0
-  - prompt-toolkit=3.0.26=pyha770c72_0
-  - pthread-stubs=0.4=hcd874cb_1001
-  - pygments=2.11.2=pyhd8ed1ab_0
-  - pyparsing=3.0.7=pyhd8ed1ab_0
-  - pyqt=5.12.3=py37h03978a9_8
-  - pyqt-impl=5.12.3=py37hf2a7229_8
-  - pyqt5-sip=4.19.18=py37hf2a7229_8
-  - pyqtchart=5.12=py37hf2a7229_8
-  - pyqtwebengine=5.12.1=py37hf2a7229_8
-  - python=3.7.9=h7840368_100_cpython
-  - python-dateutil=2.8.2=pyhd8ed1ab_0
-  - python_abi=3.7=2_cp37m
-  - pytz=2021.3=pyhd8ed1ab_0
-  - pywin32=303=py37hcc03f2d_0
-  - pyzmq=22.3.0=py37hcce574b_1
-  - qt=5.12.9=h5909a2a_4
-  - scikit-learn=1.0.2=py37hcabfae0_0
-  - scipy=1.7.3=py37hb6553fb_0
-  - setuptools=59.8.0=py37h03978a9_0
-  - six=1.16.0=pyh6c4a22f_0
-  - sqlite=3.37.0=h8ffe710_0
-  - tbb=2021.5.0=h2d74725_0
-  - threadpoolctl=3.1.0=pyh8a188c0_0
-  - tk=8.6.11=h8ffe710_1
-  - tornado=6.1=py37hcc03f2d_2
-  - traitlets=5.1.1=pyhd8ed1ab_0
-  - ucrt=10.0.20348.0=h57928b3_0
-  - unicodedata2=14.0.0=py37hcc03f2d_0
-  - vc=14.2=hb210afc_6
-  - vs2015_runtime=14.29.30037=h902a5da_6
-  - wcwidth=0.2.5=pyh9f0ad1d_2
-  - wheel=0.37.1=pyhd8ed1ab_0
-  - xorg-libxau=1.0.9=hcd874cb_0
-  - xorg-libxdmcp=1.1.3=hcd874cb_0
-  - xz=5.2.5=h62dcd97_1
-  - zeromq=4.3.4=h0e60522_1
-  - zlib=1.2.11=h8ffe710_1013
-  - zstd=1.5.2=h6255e5f_0
+  - python=3.7.9
+  - pandas
+  - matplotlib
+  - scikit-learn
+  - numpy=1.19.5
+  - pip
   - pip:
-    - absl-py==0.15.0
-    - aiohttp==3.8.1
-    - aiosignal==1.2.0
-    - analytics-python==1.4.0
-    - anyio==3.5.0
-    - asgiref==3.5.0
-    - astunparse==1.6.3
-    - async-timeout==4.0.2
-    - asynctest==0.13.0
-    - attrs==21.4.0
-    - backoff==1.10.0
-    - bcrypt==3.2.0
-    - cached-property==1.5.2
-    - cachetools==5.0.0
-    - cffi==1.15.0
-    - charset-normalizer==2.0.11
-    - clang==5.0
-    - click==8.0.3
-    - cryptography==36.0.1
-    - docker-pycreds==0.4.0
-    - fastapi==0.73.0
-    - ffmpy==0.3.0
-    - flatbuffers==1.12
-    - frozenlist==1.3.0
-    - gast==0.4.0
-    - gitdb==4.0.9
-    - gitpython==3.1.26
-    - google-auth==2.6.0
-    - google-auth-oauthlib==0.4.6
-    - google-pasta==0.2.0
-    - gradio==2.7.5.2
-    - grpcio==1.43.0
-    - h11==0.13.0
-    - h5py==3.1.0
-    - idna==3.3
-    - importlib-metadata==4.10.1
-    - keras==2.7.0
-    - keras-preprocessing==1.1.2
-    - markdown==3.3.6
-    - markdown2==2.4.2
-    - monotonic==1.6
-    - multidict==6.0.2
-    - oauthlib==3.2.0
-    - opt-einsum==3.3.0
-    - paramiko==2.9.2
-    - pathtools==0.1.2
-    - promise==2.3
-    - protobuf==3.19.4
-    - psutil==5.9.0
-    - pyasn1==0.4.8
-    - pyasn1-modules==0.2.8
-    - pycparser==2.21
-    - pycryptodome==3.14.0
-    - pydantic==1.9.0
-    - pydub==0.25.1
-    - pyldavis==3.3.1
-    - pynacl==1.5.0
-    - pyqt5==5.12.3
-    - python-multipart==0.0.5
-    - pyyaml==6.0
-    - requests==2.27.1
-    - requests-oauthlib==1.3.1
-    - rsa==4.8
-    - sentry-sdk==1.5.4
-    - shortuuid==1.0.8
-    - sklearn==0.0
-    - smmap==5.0.0
-    - sniffio==1.2.0
-    - starlette==0.17.1
-    - tensorboard==2.8.0
-    - tensorboard-data-server==0.6.1
-    - tensorboard-plugin-wit==1.8.1
-    - tensorflow==2.7.1
-    - tensorflow-addons==0.15.0
-    - tensorflow-estimator==2.7.0
-    - tensorflow-io-gcs-filesystem==0.23.1
-    - termcolor==1.1.0
-    - tf-estimator-nightly==2.8.0.dev2021122109
-    - typeguard==2.13.3
-    - typing-extensions==3.7.4.3
-    - urllib3==1.26.8
-    - uvicorn==0.17.3
-    - wandb==0.12.10
-    - werkzeug==2.0.2
-    - wget==3.2
-    - wrapt==1.12.1
-    - yarl==1.7.2
-    - yaspin==2.1.0
-    - zipp==3.7.0
-
+    - tensorflow-addons[tensorflow]
+    - ipykernel
+    - wget
+    - gradio
+    - wandb
+    - jinja2==2.11.2
